--- a/archivers/hello.html
+++ b/archivers/hello.html
@@ -136,7 +136,7 @@
         </div>
         <div class="col-second">
           <div class="col-box col-box-author">
-  <img class="avatar" src="/image/avatar.png" alt="your_name">
+  <img class="avatar" src="/blog/image/avatar.png" alt="your_name">
   <div class="col-box-title name">your_name</div>
   <p>One sentence introducing yourself.</p>
   <p class="contact">
