--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </ul>
   
   <!-- Pagination links -->
-<div class="pagination">
+<div class="pagination" style="font-size:10px">
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1276825410'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1276825410%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 </div>
 <div class="pagination">
