--- a/archivers/2019-03-29-rabbitmq-1.html
+++ b/archivers/2019-03-29-rabbitmq-1.html
@@ -108,7 +108,7 @@ enabled=1</p>
   <h5 id="验证-erlang">验证 Erlang</h5>
   <p>yum list | grep erlang</p>
   <blockquote>
-    <p><img src="en-resource://database/4088:1" alt="6560f526e05ff70f4fb1c7c030fda9ac.png" /></p>
+    <p>![/blog/image/2019-03-29-rabbitmq-1-1.png]</p>
     <h5 id="安装-erlang">安装 Erlang</h5>
     <p>yum install -y erlang.x86_64</p>
   </blockquote>
