update image src

--- a/archivers/2019-03-29-rabbitmq-1.html
+++ b/archivers/2019-03-29-rabbitmq-1.html
@@ -108,7 +108,7 @@ enabled=1</p>
   <h5 id="验证-erlang">验证 Erlang</h5>
   <p>yum list | grep erlang</p>
   <blockquote>
-    <p>![/blog/image/2019-03-29-rabbitmq-1-1.png]</p>
+    <p><img src="en-resource:/blog/image/2019-03-29-rabbitmq-1-1.png" alt="/blog/image/2019-03-29-rabbitmq-1-1.png" /></p>
     <h5 id="安装-erlang">安装 Erlang</h5>
     <p>yum install -y erlang.x86_64</p>
   </blockquote>
