--- a/archivers/2019-03-29-rabbitmq-1.html
+++ b/archivers/2019-03-29-rabbitmq-1.html
@@ -170,7 +170,7 @@ rabbitmqctl set_permissions -p / admin '.*' '.*' '.*'
 <blockquote>
   <h5 id="本文作者-jonnyan">本文作者： JonnYan</h5>
   <h5 id="本文链接-httpsjonn-yangithubioblogarchivers2019-03-29-rabbitmq-1">本文链接： https://jonn-yan.github.io/blog/archivers/2019-03-29-rabbitmq-1</h5>
-  <h5 id="版权声明-本博客所有文章除特别声明外均采用-cc-by-nc-sa-40-许可协议转载请注明出处">版权声明： 本博客所有文章除特别声明外，均采用 CC BY-NC-SA 4.0 许可协议。转载请注明出处！</h5>
+  <h5 id="版权声明-本博客所有文章除特别声明外均采用-cc-by-nc-sa-40-许可协议转载请注明出处">版权声明： 本博客所有文章除特别声明外，均采用 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> 许可协议。转载请注明出处！</h5>
 </blockquote>
 
   </article>
